--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
 	<string name="app_name">Photo Gallery</string>
 
-	<string name="hello_world">Hello world!</string>
 	<string name="action_settings">Settings</string>
+	<string name="menu_settings">Settings</string>
+	<string name="title_activity_photo_gallery">PhotoGalleryActivity</string>
+	<string name="search_hint">Search Flickr</string>
+	<string name="search">Search</string>
+	<string name="clear_search">Clear Search</string>
 </resources>
